--- a/Game/index.html
+++ b/Game/index.html
@@ -615,7 +615,7 @@
         window.addEventListener('blur', () => {
             if (isPlaying) {
                 isPlaying = false;
-                // alert('游戏已暂停，点击确定继续');
+                alert('游戏已暂停，点击确定继续');
                 isPlaying = true;
             }
         });
