--- a/Game/index.html
+++ b/Game/index.html
@@ -349,7 +349,7 @@
         <div>连击: <span id="combo">x1</span></div>
         <div>血量: <span id="hp">■■■</span></div>
         <div>增益: <span id="buff">无</span></div>
-        <div>DEBUG: <span id="debug"></span></div>
+        <!-- <div>DEBUG: <span id="debug"></span></div> -->
     </div>
 
     <div id="waveInfo">
