--- a/Game/index.html
+++ b/Game/index.html
@@ -349,7 +349,7 @@
         <div>连击: <span id="combo">x1</span></div>
         <div>血量: <span id="hp">■■■</span></div>
         <div>增益: <span id="buff">无</span></div>
-        <!-- <div>DEBUG: <span id="debug"></span></div> -->
+        <div>DEBUG: <span id="debug"></span></div>
     </div>
 
     <div id="waveInfo">
@@ -615,7 +615,7 @@
         window.addEventListener('blur', () => {
             if (isPlaying) {
                 isPlaying = false;
-                alert('游戏已暂停，点击确定继续');
+                // alert('游戏已暂停，点击确定继续');
                 isPlaying = true;
             }
         });
