--- a/quantify/index.html
+++ b/quantify/index.html
@@ -121,7 +121,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="class-title">🏫 2024级21班量化得分排名</h1>
+        <h1 class="class-title">🏫 2024级21班量化得分排名（3.16-4.21）</h1>
     </div>
 
     <div class="ranking-container">
@@ -140,11 +140,50 @@
     <script>
         // 初始化数据
         let students = [
-            { name: "张三", score: 92 },
-            { name: "李四", score: 88 },
-            { name: "王五", score: 85 },
-            { name: "陈六", score: 82 },
-            { name: "赵七", score: 79 }
+        { name: "陈宇轩", score: 0 },
+        { name: "陈昱哲", score: 0 },
+        { name: "党子贤", score: 0 },
+        { name: "冯树薇", score: 2 },
+        { name: "凤嵩", score: 0 },
+        { name: "管瑞奇", score: 2 },
+        { name: "韩润泽", score: 2 },
+        { name: "贾舰程", score: 0 },
+        { name: "雷明哲", score: 0 },
+        { name: "李嘉皓", score: -1 },
+        { name: "李送青", score: -2 },
+        { name: "李肖伊", score: 0 },
+        { name: "李鑫鸿", score: 0 },
+        // { name: "李旭阳", score: 1 },
+        { name: "李旭阳", score: -9999 },
+        { name: "李雨嫣", score: 0 },
+        { name: "李玉莹", score: 2 },
+        { name: "李子涵", score: 2 },
+        { name: "刘沂凡", score: 0 },
+        { name: "刘宇桐", score: 4 },
+        { name: "鲁成旭", score: 0 },
+        { name: "戚雅轩", score: -3 },
+        { name: "邱子萱", score: 2 },
+        { name: "沈仁程", score: -0.5 },
+        { name: "宋世博", score: 2 },
+        { name: "宋雨泽", score: -1.5 },
+        { name: "隋羽凡", score: 1 },
+        { name: "孙浩宸", score: 0 },
+        { name: "孙俊萌", score: 4 },
+        { name: "谭羽晴", score: -1.5 },
+        { name: "王奥明", score: 2 },
+        { name: "王承宇", score: -2 },
+        { name: "王淑慧", score: 2 },
+        { name: "王祎超", score: 0 },
+        { name: "徐号惟", score: -1 },
+        { name: "杨帅", score: -3 },
+        { name: "张翰霖", score: 0 },
+        { name: "张浩冉", score: 4 },
+        { name: "张峻豪", score: -1 },
+        { name: "张文浩", score: -1.5 },
+        { name: "张雨晗", score: 2 },
+        { name: "赵向栋", score: 6 },
+        { name: "周兆存", score: 0 },
+        { name: "朱鸿俊", score: -2 }
         ];
 
         // 自动计算排名
