--- a/index.html
+++ b/index.html
@@ -99,6 +99,34 @@
                 font-size: 2em;
             }
         }
+            /* 页脚 */
+            .footer {
+                margin-top: auto;
+                padding: 25px 20px;
+                text-align: center;
+                color: #7f8c8d;
+                border-top: 1px solid rgba(0,0,0,0.1);
+                /* background-color: rgba(255,255,255,0.8);  */
+                backdrop-filter: blur(5px);
+            }
+
+            .footer-content {
+                max-width: 1200px;
+                margin: 0 auto;
+                font-size: 0.9em;
+            }
+
+            .footer-divider {
+                margin: 0 10px;
+                opacity: 0.5;
+            }
+
+            @media (max-width: 768px) {
+                .footer {
+                    padding: 15px 10px;
+                    font-size: 0.8em;
+                }
+            }
     </style>
 </head>
 <body>
@@ -133,6 +161,17 @@
         </a>
 
     </div>
-
+    <div class="footer">
+        <div class="footer-content">
+            <span>2024级21班 班级主页</span>
+            <span class="footer-divider">|</span>
+            <span>班主任：鲍老师</span>
+            <span class="footer-divider">|</span>
+            <span>技术支持：刘宇桐</span>
+            <br>
+            <span>© 2024 Class 21. All rights reserved.</span>
+        </div>
+    </div>
+    
 </body>
 </html>
